--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "composer/installers": "~2.2",
         "moodle/moodle": "v4.*",
         "moodle-an-hochschulen/boost_union": "v4.3.*",
-        "null/contentmodifier": "v1.*",
-        "null/h5peventsystem": "v1.*"
+        "bytesparrow/contentmodifier": "v1.*",
+        "bytesparrow/h5peventsystem": "v1.*"
     }
 }
